--- a/src/components/table_calendar/tableCalendar.module.sass
+++ b/src/components/table_calendar/tableCalendar.module.sass
@@ -6,8 +6,8 @@
     align-items: center
     padding: 0px 24px
     gap: 1rem
-    @media (max-width: 768px)
-        padding: 0px 18px
+    @media (max-width: 500px)
+        padding: 0px
         gap: 5%
     &_table
         width: 100%
@@ -16,8 +16,8 @@
         border-collapse: collapse
         background-color: transparent
         border: none
-        @media (max-width: 768px)
-            width: 35%
+        @media (max-width: 500px)
+            width: 40%
         &_row
             td
                 border: none
@@ -26,10 +26,10 @@
                 width: 45%
                 text-align: left
             &_separator
-                width: 10%
+                width: 5%
                 text-align: center
             &_timeColumn
-                width: 45%
+                width: 50%
                 text-align: right
 
 
