--- a/src/components/Home/Hero/hero.module.sass
+++ b/src/components/Home/Hero/hero.module.sass
@@ -18,17 +18,35 @@ h3 span::after
   padding-left: 60px
   overflow: hidden // Évite le scroll horizontal
   box-sizing: border-box // Inclut le padding dans la largeur totale
-  @media (max-width: 768px)
-    position: relative
-    display: flex
-    height: 345px
+  background: linear-gradient(270deg,$beige, $blanc, #e8c0a5, $Latte)
+  background-size: 400% 400%  // Pour créer l'effet de mouvement
+  animation: gradientBackground 15s ease infinite // Durée de l'animation 15 secondes
+  position: relative
+  
+  &::before 
+    content: ""
+    position: absolute
+    top: 0px
+    left: 0
+    width: 100%
+    height: 20px
+    background: url('../../../assets/icône_illustration/bckgrd/wave.svg') 
+    background-repeat: repeat-x
+    background-size: 200% 100% // Double la largeur pour l'animation
+    filter: invert(1) brightness(10000%)
+    transform: rotate(180deg)
+    animation: wave 15s linear infinite
+
+  @media (max-width: 500px)
     padding: 18px 15px
     flex-direction: column
     align-items: flex-start
-    gap: 18px
-    flex-shrink: 0
     align-self: stretch
-        
+    gap: 18px
+    height: 345px
+    flex-shrink: 0
+    padding: 2px
+
   &_txt
     display: flex
     flex-direction: column
@@ -39,11 +57,12 @@ h3 span::after
     padding: 24px
     gap: 24px
     box-sizing: border-box // Assure que le padding est inclus dans la largeur
-    @media (max-width: 768px)
+    z-index: 1
+    @media (max-width: 500px)
       gap: 18px
       width: 100%
       height: auto
-      padding: 0px
+      padding: 18px
     
     // Ajout de l'animation d'apparition
     h1 span, h3 span
@@ -70,7 +89,8 @@ h3 span::after
     display: flex
     justify-content: center 
     align-items: center 
-    @media (max-width: 768px)
+    z-index: 0
+    @media (max-width: 500px)
       position: absolute
       right: 0
       bottom: 0
@@ -85,7 +105,9 @@ h3 span::after
       z-index: 1
       pointer-events: none
       animation: rotateFleur 50s linear infinite // rotation 20s pour un tour complet
-    
+      @media (max-width: 500px)
+        right: 0px
+        bottom: -5px
     &_main
       position: absolute
       right: 0
@@ -93,6 +115,8 @@ h3 span::after
       width: 125%
       height: auto
       z-index: 2
+      @media (max-width: 500px)
+        bottom: -10px
 
 // Animation de rotation pour la fleur
 @keyframes rotateFleur 
@@ -109,3 +133,19 @@ h3 span::after
   to
     opacity: 1
     transform: translateY(0) // Remonter à sa position normale
+
+// Animation du fond dégradé
+@keyframes gradientBackground
+  0%
+    background-position: 0% 50%
+  50%
+    background-position: 100% 50%
+  100%
+    background-position: 0% 50%
+
+// Animation de la bordure du haut de homeHero
+@keyframes wave 
+  0% 
+    background-position: 0% 0%
+  100%
+    background-position: 100% 0%
