--- a/src/components/Home/s1_salon/S1salon.module.sass
+++ b/src/components/Home/s1_salon/S1salon.module.sass
@@ -1,4 +1,113 @@
 @import '../../../index.sass'
+
+.s1Salon
+  display: flex
+  justify-content: center
+  align-items: center
+  gap: 5%
+  height: auto
+  padding: 24px 60px
+  align-self: stretch
+  background-color: $beige
+  overflow: hidden
+  box-sizing: border-box
+  position: relative
+  @media (max-width: 500px)
+    padding: 18px 15px
+
+  &_bkgrd
+    width: 60%
+    height: 455px
+    position: absolute
+    right: 12.6%
+    top: 22px
+    background-color: $black
+    z-index: 1
+    opacity: 0
+    transform: translateX(100%)
+    transition: opacity 0.6s, transform 1.6s
+    @media (max-width: 500px)
+      width: 92%
+      height: 391px
+      right: auto
+      top: auto
+      left: auto
+      bottom: 18px
+      opacity: 1 // Rendre visible immédiatement
+      transform: translateX(0) // Position finale sans animation
+      transition: none 
+
+  &_container
+    display: flex
+    justify-content: space-between
+    align-items: center
+    width: 88%
+    height: 455px
+    z-index: 2
+    @media (max-width: 500px)
+      flex-direction: column
+      align-items: center
+      padding-bottom: 18px
+      width: 92%
+      height: auto
+      gap: 5%
+      flex: 1 0 0
+
+    &_imgvitrine
+      border: 8px solid $black
+      width: 39%
+      height: auto
+      opacity: 0
+      transform: translateX(-100%)
+      transition: opacity 0.6s, transform 1.6s
+      @media (max-width: 500px)
+        border: 2px solid $black
+        width: 40%
+        opacity: 1 // Rendre visible immédiatement
+        transform: translateX(0) // Position finale sans animation
+        transition: none
+
+    &_txt
+      display: flex
+      flex-direction: column
+      justify-content: space-between
+      align-items: flex-start
+      width: 43%
+      height: 80%
+      padding: 24px
+      flex-shrink: 0
+      color: $beige
+      opacity: 0
+      transform: translateX(100%)
+      transition: opacity 0.6s, transform 1.6s
+      @media (max-width: 500px)
+        width: 73%
+        height: auto
+        gap: 18px
+        padding: 5%
+        opacity: 1 // Rendre visible immédiatement
+        transform: translateX(0) // Position finale sans animation
+        transition: none
+
+    &_button1
+      display: block
+      @media (max-width: 500px)
+        display: none
+
+    &_button2
+      display: none
+      @media (max-width: 500px)        
+        display: block
+
+    &_icone
+      display: block
+      @media (max-width: 1000px)
+        display: none
+
+  .visible
+    opacity: 1
+    transform: translateX(0)
+
 // Animation d'apparition
 @keyframes slideInFromRight
   from
@@ -15,117 +124,3 @@
   to
     transform: translateX(0)
     opacity: 1
-
-.s1Salon
-  position: relative
-  display: flex
-  padding: 24px 60px
-  justify-content: center
-  align-items: center
-  gap: 5%
-  height: auto
-  align-self: stretch
-  background-color: $beige
-  overflow: hidden
-  box-sizing: border-box
-  @media (max-width: 768px)
-    display: flex
-    padding: 18px 15px
-    justify-content: center
-    align-items: center
-    height: auto
-
-  &_bkgrd
-    width: 60%
-    height: 455px
-    position: absolute
-    right: 12.6%
-    top: 22px
-    background-color: $black
-    z-index: 1
-    opacity: 0
-    transform: translateX(100%)
-    transition: opacity 0.6s, transform 1.6s
-    @media (max-width: 768px)
-      width: 92%
-      height: 391px
-      right: auto
-      top: auto
-      left: auto
-      bottom: 18px
-      opacity: 1 // Rendre visible immédiatement
-      transform: translateX(0) // Position finale sans animation
-      transition: none // Neutraliser la transition
-
-  &_container
-    display: flex
-    width: 88%
-    height: 455px
-    justify-content: space-between
-    align-items: center
-    z-index: 2
-    @media (max-width: 768px)
-      padding-bottom: 18px
-      width: 92%
-      height: auto
-      display: flex
-      flex-direction: column
-      align-items: center
-      gap: 5%
-      flex: 1 0 0
-
-    &_imgvitrine
-      border: 8px solid $black
-      width: 39%
-      height: auto
-      opacity: 0
-      transform: translateX(-100%)
-      transition: opacity 0.6s, transform 1.6s
-      @media (max-width: 768px)
-        border: 2px solid $black
-        width: 40%
-        height: auto
-        opacity: 1 // Rendre visible immédiatement
-        transform: translateX(0) // Position finale sans animation
-        transition: none // Neutraliser la transition
-
-    &_txt
-      display: flex
-      width: 43%
-      height: 80%
-      padding: 24px
-      flex-direction: column
-      justify-content: space-between
-      align-items: flex-start
-      flex-shrink: 0
-      color: $beige
-      opacity: 0
-      transform: translateX(100%)
-      transition: opacity 0.6s, transform 1.6s
-      @media (max-width: 768px)
-        width: 73%
-        height: auto
-        gap: 18px
-        padding: 5%
-        opacity: 1 // Rendre visible immédiatement
-        transform: translateX(0) // Position finale sans animation
-        transition: none // Neutraliser la transition
-
-    &_button1
-      display: block
-      @media (max-width: 768px)
-        display: none
-
-    &_button2
-      display: none
-      @media (max-width: 768px)        
-        display: block
-
-    &_icone
-      display: block
-      @media (max-width: 1000px)
-        display: none
-
-  .visible
-    opacity: 1
-    transform: translateX(0)
