--- a/src/components/Home/s3_galerie/s3galerie.module.sass
+++ b/src/components/Home/s3_galerie/s3galerie.module.sass
@@ -7,7 +7,7 @@
     gap: 24px
     align-self: stretch
     height: auto
-    @media (max-width: 768px)
+    @media (max-width: 500px)
         padding: 18px 15px 36px 15px
         gap: 18px
     &_title
@@ -19,11 +19,11 @@
         height: auto
         justify-content: space-between
         align-items: center
-        @media (max-width: 768px)
+        @media (max-width: 500px)
             display: grid
             grid-template-columns: repeat(2, 1fr)
             grid-template-rows: repeat(2, 1fr)
-            gap: 5% 5%  // Espacement entre les colonnes et les lignes
+            gap: 5% 5%
             place-items: center  // Centre les éléments dans chaque cellule
             
         &_grp
@@ -34,7 +34,7 @@
             border-radius: 8px
             z-index: 1 
             transition: border 0.3s ease, box-shadow 0.3s ease // Ajout des transitions pour un effet lisse
-            @media (max-width: 768px)
+            @media (max-width: 500px)
                 width: 100%
                 height: 100%
             
@@ -44,6 +44,5 @@
                 flex-shrink: 0
                 border-radius: 8px
                 opacity: 80%
-                @media (max-width: 768px)
-                    width: 100%
+                @media (max-width: 500px)
                     height: 100%
