--- a/src/components/Home/s4_horaire/S4horaire.module.sass
+++ b/src/components/Home/s4_horaire/S4horaire.module.sass
@@ -10,8 +10,8 @@
     width: 100%
     height: auto
     overflow: hidden
-    box-sizing: border-box // Prend en compte padding dans la largeur totale
-    @media (max-width: 768px)
+    box-sizing: border-box
+    @media (max-width: 500px)
         padding: 18px 18px
         gap: 18px
     &_title
@@ -24,7 +24,7 @@
         justify-content: left
         align-items: center
         gap: 24px
-        @media (max-width: 768px)
+        @media (max-width: 500px)
             width: 100%
             flex-direction: column
             justify-content: space-between
@@ -33,7 +33,7 @@
             width: 35%
             height: auto
             flex-shrink: 0
-            @media (max-width: 768px)
+            @media (max-width: 500px)
                 width: 60%
                 padding-left: 15%
             &_1
@@ -45,6 +45,7 @@
                 height: 100%
                 flex-shrink: 0
                 margin: 12% 0 12% -23%
+                animation: spin 5s infinite linear
         &_txt
             display: flex
             width: 45%
@@ -54,7 +55,7 @@
             align-items: center
             gap: 16px
             flex-shrink: 0
-            @media (max-width: 768px)
+            @media (max-width: 500px)
                 width: 100%
                 gap: 5%
             &_title
@@ -66,14 +67,14 @@
                 align-items: center
                 gap: 24px
                 border-bottom: 1px solid $black
-                @media (max-width: 768px)
+                @media (max-width: 500px)
                     width: 70%
                     gap: 18px
                 &_icône
                     width: 32px
                     height: auto
                     flex-shrink: 0
-                    @media (max-width: 768px)
+                    @media (max-width: 500px)
                         width: 24px
             &_table
                 display: flex
@@ -87,6 +88,11 @@
         bottom: 0
         width: 196px
         height: 373px
-        @media (max-width: 768px)
+        @media (max-width: 500px)
             display: none
-                    
+
+@keyframes spin 
+  0%
+    transform: rotateY(0deg)
+  100% 
+    transform: rotateY(360deg)
