--- a/src/components/Home/s5_contact/s5contact.module.sass
+++ b/src/components/Home/s5_contact/s5contact.module.sass
@@ -1,11 +1,4 @@
 @import '../../../index.sass'
-@keyframes bounce 
-  0%, 20%, 50%, 80%, 100% 
-    transform: translateY(0)
-  40% 
-    transform: translateY(-20px)
-  60%
-    transform: translateY(-10px)
 
 .s5Contact
     display: flex
@@ -19,7 +12,7 @@
     overflow: hidden
     box-sizing: border-box
     position: relative
-    @media (max-width: 768px)
+    @media (max-width: 500px)
         padding: 18px 15px
         gap: 18px
     &_title
@@ -40,7 +33,7 @@
         align-self: stretch
         background-color: $terra-cotta
         position: relative
-        @media (max-width: 768px)
+        @media (max-width: 500px)
             padding: 18px
             gap: 18px
         &_subtitle
@@ -54,7 +47,7 @@
             align-items: flex-start
             gap: 24px
             color: $beige
-            @media (max-width: 768px)
+            @media (max-width: 500px)
                 padding: 18px 0px
                 gap: 18px
                 align-items: center
@@ -65,22 +58,21 @@
                 justify-content: center
                 align-items: center
                 gap: 24px
-                @media (max-width: 768px)
+                @media (max-width: 500px)
                     width: 100%
                     gap: 18px
                     padding: 0px
                 &_img1, &_img2
-                    width: auto // Garde la largeur automatique
-                    height: auto // Garde la hauteur automatique
+                    width: auto 
+                    height: auto
                     max-width: 100% // Empêche l'image de dépasser la largeur de son conteneur
                     max-height: 100% // Empêche l'image de dépasser la hauteur de son conteneur
-                    @media (max-width: 768px)
-                        width: 13% // Ajuste la taille de l'image proportionnellement à la largeur de l'écran
-                        height: auto // Assure que l'image garde ses proportions
+                    @media (max-width: 500px)
+                        width: 13% 
                 &_img2
                     animation: bounce 1s infinite
                 &_text
-                    @media (max-width: 768px)
+                    @media (max-width: 500px)
                         text-align: center
 
         &_fleurpleine
@@ -91,7 +83,7 @@
             position: absolute
             right: -10%
             top: 10%
-            @media (max-width: 768px)
+            @media (max-width: 500px)
                 display: none
 
         &_fleurvide
@@ -102,7 +94,7 @@
             position: absolute
             left: -8%
             bottom: 10%
-            @media (max-width: 768px)
+            @media (max-width: 500px)
                 display: none
 
         &_petitefleurpleine
@@ -113,7 +105,7 @@
             position: absolute
             left: 10%
             top: 15%
-            @media (max-width: 768px)
+            @media (max-width: 500px)
                 left: 6%
                 top: 25%
 
@@ -125,9 +117,10 @@
             position: absolute
             right: 20%
             top: 10%
-            @media (max-width: 768px)
+            @media (max-width: 500px)
                 right: 6%
                 top: 80%
+                
         &_petitefleurvide2
             display: flex
             width: 10%
@@ -136,7 +129,15 @@
             position: absolute
             right: 10%
             bottom: 20%
-            @media (max-width: 768px)
+            @media (max-width: 500px)
                 display: none
-       
+
+//Animation ic^ne réseaux
+@keyframes bounce 
+  0%, 20%, 50%, 80%, 100% 
+    transform: translateY(0)
+  40% 
+    transform: translateY(-20px)
+  60%
+    transform: translateY(-10px)
 
