--- a/src/components/Home/Hero/hero.module.sass
+++ b/src/components/Home/Hero/hero.module.sass
@@ -18,9 +18,9 @@ h3 span::after
   padding-left: 60px
   overflow: hidden // Évite le scroll horizontal
   box-sizing: border-box // Inclut le padding dans la largeur totale
-  background: linear-gradient(270deg,$beige, $blanc, #e8c0a5, $Latte)
+  background: linear-gradient(270deg,$beige,#f0e2d6, $blanc)
   background-size: 400% 400%  // Pour créer l'effet de mouvement
-  animation: gradientBackground 15s ease infinite // Durée de l'animation 15 secondes
+  animation: gradientBackground 10s ease infinite // Durée de l'animation 15 secondes
   position: relative
   
   &::before 
@@ -29,14 +29,15 @@ h3 span::after
     top: 0px
     left: 0
     width: 100%
-    height: 20px
+    height: 30px
     background: url('../../../assets/icône_illustration/bckgrd/wave.svg') 
     background-repeat: repeat-x
     background-size: 200% 100% // Double la largeur pour l'animation
     filter: invert(1) brightness(10000%)
     transform: rotate(180deg)
     animation: wave 15s linear infinite
-
+    @media (max-width: 500px)
+      height: 20px
   @media (max-width: 500px)
     padding: 18px 15px
     flex-direction: column
