--- a/src/components/Galerie/PhotoGalerie/photoGalerie.module.sass
+++ b/src/components/Galerie/PhotoGalerie/photoGalerie.module.sass
@@ -82,4 +82,4 @@
       grid-template-columns: 1fr // Une seule colonne de photos
       grid-gap: 18px // Réduire l'espacement entre les photos
     &__photo
-      height: 250px // Hauteur des photos pour les petits écrans
+      height: 350px 
