--- a/src/components/Salon/Hero/heroSalon.module.sass
+++ b/src/components/Salon/Hero/heroSalon.module.sass
@@ -53,9 +53,9 @@
     display: inline-block
     opacity: 0
     transform: translateY(10px) // Légèrement en dessous au départ
-    animation: appear 1s forwards // Appliquer l'animation sur chaque span
+    animation: appear 1s forwards
 
-// Animation pour l'apparition des lettres
+// Animation pour l'apparition des mots
 @keyframes appear
   from
     opacity: 0
