--- a/src/components/Service/Hero/HeroService.module.sass
+++ b/src/components/Service/Hero/HeroService.module.sass
@@ -36,11 +36,9 @@
       transform: translateY(10px) // Légèrement en dessous au départ
       animation: appear 1s forwards // Appliquer l'animation sur chaque span
 
-
     h1, h3
       display: inline
       margin: 0
-
 
   &_img
     position: relative
@@ -66,7 +64,7 @@
       height: auto
       z-index: 2
 
-// Animation pour l'apparition des lettres
+// Animation pour l'apparition des mots
 @keyframes appear
   from
     opacity: 0
