--- a/src/components/Salon/s4_coordonnees/coordonnee.module.sass
+++ b/src/components/Salon/s4_coordonnees/coordonnee.module.sass
@@ -61,6 +61,7 @@
                 display: flex      
                 justify-content: center
                 align-items: center
+                width: 100%
                 gap: 24px
                 @media (max-width: 768px)
                     width: 100%
